name:                async-timer
version:             0.1.3
synopsis:            Support for timer based execution of IO actions
description:         Please see README.md
homepage:            https://github.com/mtesseract/async-timer
license:             BSD3
license-file:        LICENSE
author:              Moritz Schulte
maintainer:          mtesseract@silverratio.net
copyright:           2016, 2017 Moritz Schulte
category:            Concurrency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Concurrent.Async.Timer
                     , Control.Concurrent.Async.Timer.Unsafe
  other-modules:       Control.Concurrent.Async.Timer.Internal
  build-depends:       base >= 4.7 && < 5
                     , lifted-async
                     , classy-prelude
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  ghc-options:         -Wall -fno-warn-type-defaults

test-suite async-timer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , classy-prelude
                     , async-timer
                     , HUnit
                     , test-framework
                     , test-framework-hunit
                     , containers
                     , criterion
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/mtesseract/async-timer
